# Hillel_Pro_

.github/workflows/: c-cpp.yml
C++Pro_08.07.2024/lesson_10/: Analyzer.cpp  CMakeLists.txt  CommandLineOptions.h  Config.cpp  Config.h  Config.json  ConfigLoader.h  ConfigManager.cpp  ConfigManager.h  Logger.cpp  Logger.h  SensorMetric.h  SensorSystem.cpp  config.json  log_2024-08-12 03:20:58.txt  log_2024-08-12 03:20:59.txt  log_2024-08-12 03:21:00.txt  log_2024-08-12 03:21:01.txt  log_2024-08-12 03:21:02.txt  log_2024-08-12 03:21:03.txt  log_2024-08-12 03:21:04.txt  log_2024-08-12 03:21:05.txt  log_2024-08-12 03:21:06.txt  log_2024-08-12 03:21:07.txt  main.cpp  resources.qrc
C++Pro_08.07.2024/lesson_11/: Analyzer.cpp  Analyzer.h  CMakeLists.txt  CommandLineOptions.cpp  Config.cpp  Config.h  ConfigLoader.cpp  ConfigLoader.h  Logger.cpp  Logger.h  MainWindow.cpp  Sensor.cpp  Sensor.h  SensorMetric.h  SensorSystem.cpp  SensorSystem.h  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
C++Pro_08.07.2024/lesson_2/: CMakeLists.txt  Plan  myUnique_ptr.h
C++Pro_08.07.2024/lesson_3/: Plan  main.cpp  shared_ptr.h
C++Pro_08.07.2024/lesson_4/: CMakeLists.txt  main  main.cpp
C++Pro_08.07.2024/lesson_5/: CMakeLists.txt  main.cpp  plan.txt
C++Pro_08.07.2024/lesson_5/bild/: CMakeCache.txt  Homework_5  Makefile  cmake_install.cmake
C++Pro_08.07.2024/lesson_6/: CMakeLists.txt  main.cpp  plan.txt
C++Pro_08.07.2024/lesson_7/: CMakeLists.txt  main.cpp  plan.txt
C++Pro_08.07.2024/lesson_8/: CMakeLists.txt  main.cpp  plan.txt
C++Pro_08.07.2024/lesson_9/lesson_9/: Analyzer.cpp  Analyzer.h  CMakeLists.txt  IAnalyzer.h  Logger.cpp  Logger.h  Plan  Sensor.cpp  main.cpp  sensor.cpp
lesson_12/Calculator/: CMakeLists.txt  Main.qml  main.cpp
lesson_13/: CMakeLists.txt
lesson_13/lib/: CMakeLists.txt  gate.cpp  gate.h
lesson_13/src/: main.cpp
