cmake_minimum_required(VERSION 3.5)
# Вказує мінімальну версію CMAKE для зпуску програми яка повинна бути встановленна на власному пк

project(Homework_8)
# назва проекту по якому можна буде його запускати 

set(CMAKE_CXX_STANDARD 17)
# вибір стандарта для проекту

add_executable(Homework_8 main.cpp )
# це типу макроса(псевдоніма) для мого проекта і написавши його я запускаю проект

